@@ -1,59 +1,93 @@
 package com.serviceImpl;
 
 import com.dto.ContoCorrenteDto;
+import com.dto.MovimentoDto;
 import com.entity.ContoCorrente;
+import com.entity.Movimento;
+import com.mapper.ContoCorrenteMapper;
+import com.mapper.MovimentoMapper;
 import com.repository.RepositoryContoCorrente;
+import com.repository.RepositoryMovimento;
 import com.service.ServiceContoCorrente;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ServiceContoCorrenteImpl implements ServiceContoCorrente {
+    private final RepositoryContoCorrente repositoryContoCorrente;
+        private final RepositoryMovimento repositoryMovimento;
 
-    @Autowired
-    RepositoryContoCorrente repositoryContoCorrente;
+    public ServiceContoCorrenteImpl(RepositoryContoCorrente repositoryContoCorrente ,RepositoryMovimento repositoryMovimento) {
+        this.repositoryContoCorrente = repositoryContoCorrente;
+        this.repositoryMovimento=repositoryMovimento;
+    }
 
     @Override
     public List<ContoCorrenteDto> getListaContiCorrenti() {
 
         return repositoryContoCorrente.findAll()
                 .stream()
-                .map(ContoCorrenteDto::new)
-                .toList();
+                .map(ContoCorrenteMapper::mapToContoCorrenteDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public Optional<ContoCorrenteDto> getContoCorrenteById(Integer id) {
 
         return repositoryContoCorrente.findById(id)
-                .map(ContoCorrenteDto::new);
+                .map(ContoCorrenteMapper::mapToContoCorrenteDto);
     }
 
     @Override
     public ContoCorrenteDto salvaContoCorrente(ContoCorrenteDto contoCorrenteDto) {
 
-        ContoCorrente conto=new ContoCorrente();
-        conto.setIdConto(contoCorrenteDto.getIdConto());
-        conto.setIban(contoCorrenteDto.getIban());
-        conto.setSaldo(contoCorrenteDto.getSaldo());
-        conto.setTipoConto(contoCorrenteDto.getTipoConto());
-        conto.setStato(contoCorrenteDto.getStato());
-        conto.setDataApertura(contoCorrenteDto.getDataApertura());
-        conto.setValuta(contoCorrenteDto.getValuta());
-        ContoCorrente contoSalvato = repositoryContoCorrente.save(conto);
+        ContoCorrente contoCorrente = ContoCorrenteMapper.mapToContoCorrente(contoCorrenteDto);
 
-        return new ContoCorrenteDto(contoSalvato);
+        // Valori di default
+        contoCorrente.setSaldo(BigDecimal.ZERO);
+        contoCorrente.setDataApertura(LocalDate.now());
+
+        ContoCorrente salvato = repositoryContoCorrente.save(contoCorrente);
+
+        return ContoCorrenteMapper.mapToContoCorrenteDto(salvato);
+    }
+
+    @Override
+    public ContoCorrenteDto aggiornaConto(Integer id, ContoCorrenteDto dto) {
+        return null;
     }
 
     @Override
     public void eliminaContoCorrente(Integer id) {
 
-        ContoCorrente conto = repositoryContoCorrente.findById(id)
-                .orElseThrow(() -> new RuntimeException("Conto corrente non trovato"));
+        if (!repositoryContoCorrente.existsById(id)) {
+            throw new RuntimeException("Conto corrente non trovato con id: " + id);
+        }
 
-        repositoryContoCorrente.delete(conto);
+        repositoryContoCorrente.deleteById(id);
     }
+/*
+    @Override
+    public ContoCorrenteDto deposita(Integer idConto, double importo) {
+        return null;
+    }
+
+    @Override
+    public ContoCorrenteDto preleva(Integer idConto, double importo) {
+        return null;
+    }
+
+    @Override
+    public void bonifico(Integer contoMittente, Integer contoDestinatario, double importo) {
+
+    }
+*/
+
 }
